--- a/matcha-server/package.json
+++ b/matcha-server/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.16.2",
     "mysql": "^2.17.1",
     "mysql-migrations": "^1.0.6",
+    "nodemon": "^1.19.2",
     "req-flash": "0.0.3"
   },
   "devDependencies": {
