--- a/matcha-server/package.json
+++ b/matcha-server/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "nodemon src/app.js",
+    "migrate": "node src/migration.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
